# Industry-4.0

./: .gitignore  README.md  analisis.py  analisis_dataset.py  corn1.csv  corn3.csv  main.py  prueba.py  pyproject.toml  requirements (1).txt  requirements.txt
audios_dtw/: 1  10  2  3  4  5  6  7  8  9
clases/: analisis.py  corn2.csv  dtw.py  hmm.py  main.py  menu.py
clases/__pycache__/: analisis.py  analisis_dataset.py  hmm.py
clases/__pychache__/: analisis.py  dtw.py  hmm.py
