[tool.poetry]
name = "repl_nix_Industry-40"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
matplotlib = "^3.6.0"
hmmlearn = "^0.2.7"
numpy = "^1.23.3"
torch = "^1.12.1"
torchaudio = "^0.12.1"
ipython = "^8.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
